entity_macros/tests/ui/derive/ent/no-ent-typed_methods-means-no-typed-load-for-edge.stderr
error[E0599]: no method named `load_my_edge` found for struct `TestEnt` in the current scope
  --> $DIR/no-ent-typed_methods-means-no-typed-load-for-edge.rs:31:17
   |
5  | struct TestEnt {
   | -------------- method `load_my_edge` not found for this
...
31 |     let _ = ent.load_my_edge().unwrap();
   |                 ^^^^^^^^^^^^ method not found in `TestEnt`
